--- a/mobile/src/app/features/tabs/tabs.page.scss
+++ b/mobile/src/app/features/tabs/tabs.page.scss
@@ -15,7 +15,7 @@
   display: block;
   height: 100%;
   padding-top: calc(env(safe-area-inset-top) + 8px);
-  padding-bottom: calc(env(safe-area-inset-bottom) + 86px);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 116px);
 }
 
 .update-banner {
